--- a/SRC/Views/index.ejs
+++ b/SRC/Views/index.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Public/Styles/indexstyle.css">
+    <link rel="stylesheet" href="../Styles/indexstyle.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Remote PA</title>
@@ -50,7 +50,7 @@
     </section>
 
     <section class="hero">
-        <img src="../Public/images/background.png" class="img-fluid" alt="...">
+        <img src="../images/background.png" class="img-fluid" alt="...">
     </section>
 
 
