--- a/SRC/Views/index.ejs
+++ b/SRC/Views/index.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Public/Styles/indexstyle.css">
+    <link rel="stylesheet" href="/Styles/indexstyle.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Remote PA</title>
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section style="background-color: aqua;" id="header">
+    <section  id="header">
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
@@ -29,18 +29,6 @@
                       <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="signup.html">Sign Up</a>
                       </li>
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          How 
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <li><a class="dropdown-item" href="#">Action</a></li>
-                          <li><a class="dropdown-item" href="#">Another action</a></li>
-                          <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                      </li>
-                  
                     </ul>
                    
                   </div>
@@ -49,8 +37,23 @@
         </header>
     </section>
 
-    <section class="hero">
-        <img src="../Public/images/background.png" class="img-fluid" alt="...">
+    <section class="hero" >
+        <img src="/images/background.png" class="img-fluid" alt="...">
+    </section>
+
+    <section class="about">
+
+      <h1>Get a Head start on how to use the Remote PA</h1>
+
+      <div id="instrunctions">
+        <ul>
+          <li>Create a new accout or Login to your existing one!</li>
+          <li>If you are a student you can schedule new meetings with your lecture!</li>
+          
+        </ul>
+      </div>
+
+
     </section>
 
 
