complete use instructions

--- a/SRC/Views/index.ejs
+++ b/SRC/Views/index.ejs
@@ -48,8 +48,9 @@
       <div id="instrunctions">
         <ul>
           <li>Create a new accout or Login to your existing one!</li>
-          <li>If you are a student you can schedule new meetings with your lecture!</li>
-          
+          <li>If you are a student, you can schedule new meetings with your lecture!</li>
+          <li>If you are a lecture, you can specify your availability time slots</li>
+          <li>You can cancel your meetings and update time slots to sue your forever changing schedules.</li>
         </ul>
       </div>
 
