--- a/SRC/views/Login.html
+++ b/SRC/views/Login.html
@@ -19,7 +19,7 @@
  <!------------------------- Left Box-------------------->
  <div class = 'col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box'>
     <div class = "featured-image mb-3">
-        <img src = "\SRC\Public\images\calander_image.jpg"  class = "img-fluid" style = "width: 300px;">
+        <img src = "/images/calander_image.jpg"  class = "img-fluid" style = "width: 300px;">
  </div>       
  </div>
 
