--- a/SRC/views/signup.html
+++ b/SRC/views/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <script defer src="\SRC\Public\scripts\class\signup.js"></script>
+    <script defer src="/scripts/signup.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Create an account</title>
@@ -19,7 +19,7 @@
  <!------------------------- Left Box-------------------->
  <div class = 'col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box'>
     <div class = "featured-image mb-3">
-        <img src = "\SRC\Public\images\calander_image.jpg" class = "img-fluid" style = "width: 400px;">
+        <img src = "images/calander_image.jpg" class = "img-fluid" style = "width: 400px;">
  </div>       
  </div>
 
