--- a/SRC/views/index.ejs
+++ b/SRC/views/index.ejs
@@ -24,10 +24,10 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="signin.html">Sign In</a>
+                        <a class="nav-link active" aria-current="page" href="signin">Sign In</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="signup.html">Sign Up</a>
+                        <a class="nav-link active" aria-current="page" href="signup">Sign Up</a>
                       </li>
                     </ul>
                    
