--- a/SRC/views/signup.ejs
+++ b/SRC/views/signup.ejs
@@ -79,7 +79,7 @@
       
 
     </div>
-    <a class="linkText" href="Login.html">Already have an account? Login.</a>
+    <a class="linkText" href="signin">Already have an account? Login.</a>
 
     </div>
  </div>  
