--- a/SRC/public/styles/indexstyle.css
+++ b/SRC/public/styles/indexstyle.css
@@ -8,7 +8,13 @@
 .hero{
    background-image: url(".SRC/Public/images/background.png");
 }
-
-.about h1{
+.about{
     text-align: center;
 }
+
+
+.about ul{
+    display: inline-block;
+    text-align: left;
+}
+
