--- a/SRC/views/Login.ejs
+++ b/SRC/views/Login.ejs
@@ -40,7 +40,7 @@
             <small><a href="#">Forgot Password</a></small>
         </div>
     </div>
-    <a class="linkText" href="signup.html">Don't have an Account? Create Account.</a>
+    <a class="linkText" href="signup">Don't have an Account? Create Account.</a>
     </div>
  </div>  
 
