--- a/SRC/views/index.ejs
+++ b/SRC/views/index.ejs
@@ -57,7 +57,9 @@
 
     </section>
 
-
+<footer>
+  <p>Made by Software Development III Group 3</p>
+</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
