--- a/SRC/Views/scheduleAppointment.ejs
+++ b/SRC/Views/scheduleAppointment.ejs
@@ -10,16 +10,18 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
     crossorigin="anonymous">
     <link rel="stylesheet" href="../Styles/scheduleAppointment.css">
+    <script defer src="../scripts/appointments.js"></script>
 </head>
 
 <body>
     <h3>Schedule Appointment</h3><br>
     <div class="card text-center">
         <form id="scheduleAppointmentForm" action="/scheduleAppointment" method="post">
-            <div class="mb-3" id="eventTitle">
+            <div class="mb-3">
                 <label class="form-label">Event Title
-                    <input type="text" class="form-control" name="eventTitle">
+                    <input type="text" class="form-control" id="eventTitle">
                 </label><br>
+                <p id="eventTitleError"></p>
     
                 <label class="form-label">Lecturer's Name
                     <input type="text" class="form-control" name="lecturerName">
@@ -29,7 +31,7 @@
                     <input type="text" class="form-control" name="date">
                 </label><br>
     
-                <button type="submit" class="btn btn-outline-dark">Schedule Appointment</button>
+                <button type="submit" class="btn btn-outline-dark" id="scheduleAppointmentButton">Schedule Appointment</button>
             </div>
         </form>
     </div>
@@ -37,5 +39,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
     crossorigin="anonymous"></script>
+
+
+
 </body>
 </html>
