--- a/SRC/Views/scheduleAppointment.ejs
+++ b/SRC/Views/scheduleAppointment.ejs
@@ -21,7 +21,7 @@
                 <label class="form-label">Event Title
                     <input type="text" class="form-control" id="eventTitle">
                 </label><br>
-                <p id="eventTitleError"></p>
+                <p class="form-errors" id="eventTitleError"></p>
     
                 <label class="form-label">Lecturer's Name
                     <input type="text" class="form-control" name="lecturerName">
