--- a/SRC/views/lecturerDashboard.ejs
+++ b/SRC/views/lecturerDashboard.ejs
@@ -30,6 +30,11 @@
             </nav>
         </header>
     </section>
+
+    <section id="dashboard-heading">
+        <h1>Lecturer appointment dashboard</h1>
+    </section>
+
 </body>
 
 </html>
