file authentication complete

--- a/SRC/views/dummystudentdashboard.ejs
+++ b/SRC/views/dummystudentdashboard.ejs
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to Remote PA Lecture Dashboard</h1>
+    <h1>Welcome to Remote PA Student Dashboard</h1>
 </body>
 </html>
