--- a/SRC/views/signup.ejs
+++ b/SRC/views/signup.ejs
@@ -48,8 +48,8 @@
                         <div class="input-group mb-3">
                             <select name="role" class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
                                 <option selected>Select your role</option>
-                                <option value="1">Student</option>
-                                <option value="2">Lecture</option>
+                                <option value="student">Student</option>
+                                <option value="lecture">Lecture</option>
                                
                               </select>
                         </div>
