--- a/SRC/views/lecturerDashboard.ejs
+++ b/SRC/views/lecturerDashboard.ejs
@@ -5,12 +5,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+        rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+        crossorigin="anonymous">
+    <style>
+        .menu-container {
+            border-right: 1px solid #ccc;
+            height: 100%;
+        }
+
+        .menu-container .nav-link {
+            padding: 10px;
+            border-bottom: 1px solid #ccc;
+        }
+
+        .appointments-box {
+            border: 1px solid #ccc;
+            padding: 10px;
+            margin-top: 10px;
+        }
+
+        .table-responsive {
+            overflow-x: auto;
+        }
+    </style>
     <title>Lecturer Dashboard</title>
 </head>
 
 <body>
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <section id="header">
@@ -35,10 +58,62 @@
         </header>
     </section>
 
-    <section id="dashboard-heading">
-        <h1>Lecturer appointment dashboard</h1>
-    </section>
-
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 col-md-2">
+                <div class="row h-100">
+                    <div class="col-12 menu-container">
+                        <nav class="nav flex-column">
+                            <a class="nav-link active" aria-current="page" href="#">List</a>
+                            <a class="nav-link" href="#">Calendar</a>
+                            <a class="nav-link" href="#">Availability</a>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-10">
+                <section id="dashboard-heading">
+                    <h1>Lecturer appointment dashboard</h1>
+                </section>
+                <div class="appointments-box">
+                    <h2>Upcoming Appointments</h2>
+                    <div class="table-responsive">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <
+                                    <th scope="col">Date</th>
+                                    <th scope="col">Time</th>
+                                    <th scope="col">Student Name</th>
+                                    <th scope="col">Status</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>2023-05-16</td>
+                                    <td>10:00 AM</td>
+                                    <td>John Doe</td>
+                                    <td>Confirmed</td>
+                                </tr>
+                                <tr>
+                                    <td>2023-05-17</td>
+                                    <td>02:30 PM</td>
+                                    <td>Jane Smith</td>
+                                    <td>Pending</td>
+                                </tr>
+                                <tr>
+                                    <td>2023-05-18</td>
+                                    <td>09:00 AM</td>
+                                    <td>David Johnson</td>
+                                    <td>Confirmed</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
