frontend validation for when lecturer's name input field is empty

--- a/SRC/views/scheduleAppointment.ejs
+++ b/SRC/views/scheduleAppointment.ejs
@@ -29,8 +29,9 @@
                 <p class="form-errors" id="eventTitleError"></p>
     
                 <label class="form-label">Lecturer's Name
-                    <input type="text" class="form-control" name="lecturerName">
+                    <input type="text" class="form-control" id="lecturerName">
                 </label><br>
+                <p class="form-errors" id="lecturerNameError"></p>
     
                 <label class="form-label">Date
                     <input type="text" class="form-control" name="date">
