--- a/SRC/views/studentDashboard.ejs
+++ b/SRC/views/studentDashboard.ejs
@@ -11,7 +11,9 @@
 
 </head>
 <body>
+
     <section id="header">
+        <!--navbar-->
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
@@ -32,7 +34,63 @@
             </nav>
         </header>
     </section>
-
+    <!--Body-->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 col-md-2">
+                <div class="row h-100">
+                    <div class="col-12 menu-container">
+                        <nav class="nav flex-column">
+                            <a class="nav-link active" aria-current="page" href="#">Set Appointment</a>
+                            <a class="nav-link" href="#">View Available Time slots</a>
+                            <a class="nav-link" href="#">Cancel Appointments</a>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-10">
+                <section id="dashboard-heading">
+                    <h1>Student appointment dashboard</h1>
+                </section>
+                <div class="appointments-box">
+                    <h2>Upcoming Appointments</h2>
+                    <div class="table-responsive">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                
+                                    <th scope="col">Date</th>
+                                    <th scope="col">Time</th>
+                                    <th scope="col">Lecturer Name</th>
+                                    <th scope="col">Status</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>2023-05-16</td>
+                                    <td>10:00 AM</td>
+                                    <td>John Doe</td>
+                                    <td>Confirmed</td>
+                                </tr>
+                                <tr>
+                                    <td>2023-05-17</td>
+                                    <td>02:30 PM</td>
+                                    <td>Jane Smith</td>
+                                    <td>Pending</td>
+                                </tr>
+                                <tr>
+                                    <td>2023-05-18</td>
+                                    <td>09:00 AM</td>
+                                    <td>David Johnson</td>
+                                    <td>Confirmed</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
