student routes complete

--- a/SRC/views/studentDashboard.ejs
+++ b/SRC/views/studentDashboard.ejs
@@ -41,7 +41,7 @@
                 <div class="row h-100">
                     <div class="col-12 menu-container">
                         <nav class="nav flex-column">
-                            <a class="nav-link active" aria-current="page" href="/scheduleAppointments">Set Appointment</a>
+                            <a class="nav-link active" aria-current="page" href="/scheduleAppointment">Set Appointment</a>
                             <a class="nav-link" href="#">View Available Time slots</a>
                             <a class="nav-link" href="#">Cancel Appointments</a>
                         </nav>
