Add button and Routing in Lectuer Dashboard

--- a/SRC/views/lecturerDashboard.ejs
+++ b/SRC/views/lecturerDashboard.ejs
@@ -67,6 +67,7 @@
                             <a class="nav-link active" aria-current="page" href="#">List</a>
                             <a class="nav-link" href="#">Calendar</a>
                             <a class="nav-link" href="#">Availability</a>
+                            <a class="nav-link" id="Edit" href="\update">Edit Consultation</a>
                         </nav>
                     </div>
                 </div>
