Review feedback changes

--- a/SRC/views/update.ejs
+++ b/SRC/views/update.ejs
@@ -14,20 +14,24 @@
     <header>
         <h1>Edit your Appointment</h1>
     </header>
+    <!--------------Placeholder-------------------->
     <div class="container">
         <p>Choose which Consultation you want to update</p>
     </div>
-    <div class="sub-container">
+    <!--------------Placeholder-------------------->
+    <div class="container">
         <p>Event title</p>
     </div>
-    <div class="sub-container">
+    <!--------------Placeholder-------------------->
+    <div class="container">
         <p>Assign Different Lecturer/TA(Optional)</p>
     </div>
-    <div class="sub-container">
+    <!--------------Placeholder-------------------->
+    <div class="container">
         <p>Change the dates</p>
     </div>
-
-    <div class="sub-container">
+   
+    <div class="container">
         <p>Update Times</p>
         <form action="/updateConsultationTimes" method="post">
           <label for="newTime">New Consultation Time Range:</label><br>
@@ -36,7 +40,7 @@
           <input type="submit" value="Submit">
         </form>
       </div>
-    <div class="sub-container">
+    <div class="container">
         <p>Cancel Consultation</p>
      </div>  
      <footer class="footer">
