--- a/SRC/views/scheduleAppointment.ejs
+++ b/SRC/views/scheduleAppointment.ejs
@@ -36,7 +36,7 @@
                 <label class="form-label">Date
                     <input type="datetime-local" class="form-control" id="date">
                 </label><br>
-                <p class="form-errors" id="DateError"></p>
+                <p class="form-errors" id="dateError"></p>
     
                 <button type="submit" class="btn btn-outline-dark" id="scheduleAppointmentButton">Schedule Appointment</button>
             </div>
