--- a/SRC/views/Availability.ejs
+++ b/SRC/views/Availability.ejs
@@ -7,6 +7,55 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Availability</h2>
+    <h1>Set Availability times</h1>
+    <div class="container">
+        <p>Monday</p>
+        <form action="/AddForMonday" method="post">
+          <label for="newTime">Time Range:</label><br>
+          <input type="time" id="newTime" name="startTime"> to 
+          <input type="time" id="endTime" name="endTime"><br>
+          <input type="submit" value="Submit">
+        </form>
+      </div>
+
+      <div class="container">
+        <p>Tuesday</p>
+        <form action="/AddForTues" method="post">
+          <label for="newTime">Time Range:</label><br>
+          <input type="time" id="newTime" name="startTime"> to 
+          <input type="time" id="endTime" name="endTime"><br>
+          <input type="submit" value="Submit">
+        </form>
+      </div>
+
+      <div class="container">
+        <p>Wednesday</p>
+        <form action="/AddForWed" method="post">
+          <label for="newTime">Time Range:</label><br>
+          <input type="time" id="newTime" name="startTime"> to 
+          <input type="time" id="endTime" name="endTime"><br>
+          <input type="submit" value="Submit">
+        </form>
+      </div>
+
+      <div class="container">
+        <p>Thursday</p>
+        <form action="/AddForThurs" method="post">
+          <label for="newTime">Time Range:</label><br>
+          <input type="time" id="newTime" name="startTime"> to 
+          <input type="time" id="endTime" name="endTime"><br>
+          <input type="submit" value="Submit">
+        </form>
+      </div>
+
+      <div class="container">
+        <p>Friday</p>
+        <form action="/AddForFri" method="post">
+          <label for="newTime">Time Range:</label><br>
+          <input type="time" id="newTime" name="startTime"> to 
+          <input type="time" id="endTime" name="endTime"><br>
+          <input type="submit" value="Submit">
+        </form>
+      </div>
 </body>
 </html>
