--- a/SRC/views/Availability.ejs
+++ b/SRC/views/Availability.ejs
@@ -4,58 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Schedule Appointment</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
+    crossorigin="anonymous">
+    <link rel="stylesheet" href="../styles/scheduleAppointment.css">
+
+
+
 </head>
+
 <body>
-    <h1>Set Availability times</h1>
-    <div class="container">
-        <p>Monday</p>
-        <form action="/AddForMonday" method="post">
-          <label for="newTime">Time Range:</label><br>
-          <input type="time" id="newTime" name="startTime"> to 
-          <input type="time" id="endTime" name="endTime"><br>
-          <input type="submit" value="Submit">
+    <h3>Set Appointment</h3><br>
+    <div class="card text-center">
+        <form id="scheduleAppointmentForm" action="/scheduleAppointment" method="post">
+            <div class="mb-3">
+        
+                <label class="form-label">Availability time
+                    <input name="availabilityTime" type="text" class="form-control" >
+                </label><br>
+                <p class="form-errors" id="eventTitleError"></p>
+    
+                <label class="form-label">Number of students allowed
+                    <input name="numberOfStudents" type="text" class="form-control" >
+                </label><br>
+                  <label class="form-label">Date
+                    <input name="date" type="text" class="form-control" >
+                </label><br>
+    
+        
+                <input type="submit">
+              
+            </div>
         </form>
-      </div>
+    </div>
 
-      <div class="container">
-        <p>Tuesday</p>
-        <form action="/AddForTues" method="post">
-          <label for="newTime">Time Range:</label><br>
-          <input type="time" id="newTime" name="startTime"> to 
-          <input type="time" id="endTime" name="endTime"><br>
-          <input type="submit" value="Submit">
-        </form>
-      </div>
 
-      <div class="container">
-        <p>Wednesday</p>
-        <form action="/AddForWed" method="post">
-          <label for="newTime">Time Range:</label><br>
-          <input type="time" id="newTime" name="startTime"> to 
-          <input type="time" id="endTime" name="endTime"><br>
-          <input type="submit" value="Submit">
-        </form>
-      </div>
-
-      <div class="container">
-        <p>Thursday</p>
-        <form action="/AddForThurs" method="post">
-          <label for="newTime">Time Range:</label><br>
-          <input type="time" id="newTime" name="startTime"> to 
-          <input type="time" id="endTime" name="endTime"><br>
-          <input type="submit" value="Submit">
-        </form>
-      </div>
-
-      <div class="container">
-        <p>Friday</p>
-        <form action="/AddForFri" method="post">
-          <label for="newTime">Time Range:</label><br>
-          <input type="time" id="newTime" name="startTime"> to 
-          <input type="time" id="endTime" name="endTime"><br>
-          <input type="submit" value="Submit">
-        </form>
-      </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
+    crossorigin="anonymous"></script>
 </body>
 </html>
