add name attribute for req.body

--- a/SRC/views/scheduleAppointment.ejs
+++ b/SRC/views/scheduleAppointment.ejs
@@ -24,17 +24,17 @@
         <form id="scheduleAppointmentForm" action="/scheduleAppointment" method="post">
             <div class="mb-3">
                 <label class="form-label">Event Title
-                    <input type="text" class="form-control" id="eventTitle">
+                    <input name="eventTitle" type="text" class="form-control" id="eventTitle">
                 </label><br>
                 <p class="form-errors" id="eventTitleError"></p>
     
                 <label class="form-label">Lecturer's Name
-                    <input type="text" class="form-control" id="lecturerName">
+                    <input name="lecturerName" type="text" class="form-control" id="lecturerName">
                 </label><br>
                 <p class="form-errors" id="lecturerNameError"></p>
     
                 <label class="form-label">Date
-                    <input type="datetime-local" class="form-control" id="date">
+                    <input name="date" type="datetime-local" class="form-control" id="date">
                 </label><br>
                 <p class="form-errors" id="dateError"></p>
     
