schedule and display scheduled appointment

--- a/SRC/views/studentDashboard.ejs
+++ b/SRC/views/studentDashboard.ejs
@@ -59,10 +59,10 @@
                             <thead>
                                 <tr>
                                 
-                                    <th scope="col">Date</th>
-                                    <th scope="col">Time</th>
+                                    <th scope="col">Date & Time</th>
+                                    <th scope="col">Event Title</th>
                                     <th scope="col">Lecturer Name</th>
-                                    <th scope="col">Status</th>
+                                    
                                 </tr>
                             </thead>
                             <tbody>
