--- a/SRC/views/studentDashboard.ejs
+++ b/SRC/views/studentDashboard.ejs
@@ -42,7 +42,7 @@
                     <div class="col-12 menu-container">
                         <nav class="nav flex-column">
                             <a class="nav-link active" aria-current="page" href="/scheduleAppointment">Set Appointment</a>
-                            <a class="nav-link" href="/appointments">View Available Time slots</a>
+                            <a class="nav-link" href="#">View Available Time slots</a>
                             <a class="nav-link" href="#">Cancel Appointments</a>
                         </nav>
                     </div>
@@ -66,8 +66,8 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <% if(appointments.length===0){ %>
-                                    <p>No appointments available.</p>
+                                <% if(appointments.length === 0){ %>
+                                    <td>No appointments available.</td>
                                     <% }else { %>
                                         <% appointments.forEach(function(appointment){ %>
                                             <tr>
