route to schedule fix

--- a/SRC/views/Availability.ejs
+++ b/SRC/views/Availability.ejs
@@ -18,7 +18,7 @@
 <body>
     <h3>Set Appointment</h3><br>
     <div class="card text-center">
-        <form id="scheduleAppointmentForm" action="/scheduleAppointment" method="post">
+        <form id="scheduleAppointmentForm" action="/createTimeslot" method="post">
             <div class="mb-3">
         
                 <label class="form-label">Availability time
