--- a/SRC/views/studentDashboard.ejs
+++ b/SRC/views/studentDashboard.ejs
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-        rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-        crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Student</title>
 
 </head>
+
 <body>
 
     <section id="header">
@@ -41,7 +42,8 @@
                 <div class="row h-100">
                     <div class="col-12 menu-container">
                         <nav class="nav flex-column">
-                            <a class="nav-link active" aria-current="page" href="/scheduleAppointment">Set Appointment</a>
+                            <a class="nav-link active" aria-current="page" href="/scheduleAppointment">Set
+                                Appointment</a>
                             <a class="nav-link" href="#">View Available Time slots</a>
                             <a class="nav-link" href="#">Cancel Appointments</a>
                         </nav>
@@ -58,15 +60,15 @@
                         <table class="table">
                             <thead>
                                 <tr>
-                                
+
                                     <th scope="col">Date & Time</th>
                                     <th scope="col">Event Title</th>
                                     <th scope="col">Lecturer Name</th>
-                                    
+
                                 </tr>
                             </thead>
                             <tbody>
-                                <% if(appointments.length === 0){ %>
+                                <% if(appointments.length===0){ %>
                                     <td>No appointments available.</td>
                                     <% }else { %>
                                         <% appointments.forEach(function(appointment){ %>
@@ -81,13 +83,13 @@
                                                 <td>
                                                     <%= appointment.lecturerName %>
                                                 </td>
-
-                                                <%}); %>
-
-
-                                                    <%}%>
-
                                             </tr>
+                                            <%}); %>
+
+
+                                                <%}%>
+
+
 
                             </tbody>
                         </table>
@@ -103,7 +105,8 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
