user friendly responses

--- a/SRC/views/scheduleAppointment.ejs
+++ b/SRC/views/scheduleAppointment.ejs
@@ -34,9 +34,9 @@
                     <input name="date" type="datetime-local" class="form-control" id="date">
                 </label><br>
                 <p class="form-errors" id="dateError"></p>
-                <input type="submit">
-                <!--<button type="submit" class="btn btn-outline-dark" id="scheduleAppointmentButton">Schedule
-                    Appointment</button>-->
+            
+                <button type="submit" class="btn btn-outline-dark" id="scheduleAppointmentButton">Schedule
+                    Appointment</button>
             </div>
         </form>
     </div>
