--- a/SRC/views/scheduleAppointment.ejs
+++ b/SRC/views/scheduleAppointment.ejs
@@ -21,17 +21,17 @@
         <form id="scheduleAppointmentForm" action="/scheduleAppointment" method="post">
             <div class="mb-3">
                 <label class="form-label">Event Title
-                    <input name="eventTitle" type="text" class="form-control" id="eventTitle">
+                    <input name="eventTitle" type="text" class="form-control" id="eventTitle" required>
                 </label><br>
                 <p class="form-errors" id="eventTitleError"></p>
 
                 <label class="form-label">Lecturer's Name
-                    <input name="lecturerName" type="text" class="form-control" id="lecturerName">
+                    <input name="lecturerName" type="text" class="form-control" id="lecturerName" required>
                 </label><br>
                 <p class="form-errors" id="lecturerNameError"></p>
 
                 <label class="form-label">Date
-                    <input name="date" type="datetime-local" class="form-control" id="date">
+                    <input name="date" type="datetime-local" class="form-control" id="date" required>
                 </label><br>
                 <p class="form-errors" id="dateError"></p>
             
