--- a/SRC/views/timeslot.ejs
+++ b/SRC/views/timeslot.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Schedule Appointment</title>
+    <title>Availability Timeslots</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
@@ -22,15 +22,15 @@
             <div class="mb-3">
         
                 <label class="form-label">Availability time
-                    <input name="availabilityTime" type="text" class="form-control" >
+                    <input name="availabilityTime" type="text" class="form-control" required>
                 </label><br>
                 <p class="form-errors" id="eventTitleError"></p>
     
                 <label class="form-label">Number of students allowed
-                    <input name="numberOfStudents" type="text" class="form-control" >
+                    <input name="numberOfStudents" type="text" class="form-control" required>
                 </label><br>
                   <label class="form-label">Date
-                    <input name="date" type="text" class="form-control" >
+                    <input name="date" type="text" class="form-control" required >
                 </label><br>
     
         
