--- a/SRC/views/scheduleAppointment.ejs
+++ b/SRC/views/scheduleAppointment.ejs
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../styles/scheduleAppointment.css">
 
 
-    <script defer src="../scripts/appointments.js"></script>
+    <!--<script defer src="../scripts/appointments.js"></script> -->
 </head>
 
 <body>
