--- a/SRC/public/styles/signup.css
+++ b/SRC/public/styles/signup.css
@@ -1,22 +1,11 @@
-/*body{
-    font-family: 'Poppins', Arial, Helvetica, sans-serif;
-    background: #888;
+.password-wrapper {
+  position: relative;
 }
 
-.box area{
-    width: 930px;
+.password-icon {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  cursor: pointer;
 }
-
-.button-group {
-    display: flex;
-    justify-content: center;
-  }
-
-  .input-group {
-    display: inline-block;
-    margin-right: 10px;
-  }
-
-  .error-color {
-    color: red;
-  }*/
