--- a/SRC/views/signup.ejs
+++ b/SRC/views/signup.ejs
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="stylesheet" href="/styles/signup.css"> 
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <title>Create an account</title>
 </head>
 
@@ -53,9 +55,12 @@
                                
                               </select>
                         </div>
-                            <div class="input-group mb-3">
+                            <div class="password-wrapper">
                                 <input class="form-control" type="password" id="password" placeholder="Password"
                                     name="password" oninput="validatePasswordWrapper(event)" />
+                                    <i id="togglePassword" class="fa fa-eye password-icon"></i>
+                                    </div>
+
                                 <div class="password_requirements">
                                     <ul>
                                         <div class="input-group mb-3">
@@ -66,10 +71,13 @@
                             </div>
 
 
-                            <div class="input-group mb-3">
+                            <div class="password-wrapper">
                                 <input class="form-control" type="password" id="password_confirm"
                                     placeholder="Confirm Password" name="password_confirm"
                                     oninput="confirmPasswordWrapper(event)" />
+                                    <i id="togglePassword" class="fa fa-eye password-icon"></i>
+                            </div>
+
                                 <div class="password_requirements">
                                     <ul>
                                         <div class="input-group mb-3">
