--- a/SRC/views/signup.ejs
+++ b/SRC/views/signup.ejs
@@ -75,7 +75,7 @@
                                 <input class="form-control" type="password" id="password_confirm"
                                     placeholder="Confirm Password" name="password_confirm"
                                     oninput="confirmPasswordWrapper(event)" />
-                                    <i id="togglePassword" class="fa fa-eye password-icon"></i>
+                                    <i id="togglePassword-confirm" class="fa fa-eye password-icon"></i>
                             </div>
 
                                 <div class="password_requirements">
