--- a/SRC/views/Login.ejs
+++ b/SRC/views/Login.ejs
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="login.css">
+    <link rel="stylesheet" href="/styles/Login.css"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <script defer src="/scripts/Login.js"></script>
     <title>Login</title>
 </head>
 
@@ -34,10 +36,13 @@
                             <input name="email" type="text" class="form-control form=control-lg bg-light fs-6"
                                 placeholder="Email address">
                         </div>
-                        <div class="input-group mb-3">
+
+                        <div class="password-wrapper ">
                             <input name="password" type="password" class="form-control form=control-lg bg-light fs-6"
-                                placeholder="Password">
+                                placeholder="Password" id = "password">
+                               <i id="togglePassword" class="fa fa-eye password-icon"></i>
                         </div>
+
                         <div class="input-group mb-5">
                             <input type="submit" name="loginButton" id="loginButton" value="Login">
                         </div>
