--- a/SRC/views/lecturerDashboard.ejs
+++ b/SRC/views/lecturerDashboard.ejs
@@ -74,32 +74,32 @@
                     <h1>Lecturer Appointment Dashboard</h1>
                 </section>
                 <div class="appointments-box">
-                    <h2>LecturerTime slots</h2>
+                    <h2>Lecturer Appointments</h2>
                     <div class="table-responsive">
                         <table class="table">
                             <thead>
                                 <tr>
 
-                                    <th scope="col">Time</th>
-                                    <th scope="col">Number of Students</th>
-                                    <th scope="col">Date</th>
+                                    <th scope="col">Date & Time</th>
+                                    <th scope="col">Event Title</th>
+                                    <th scope="col">Lecturer Name</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <% if(timeslots.length === 0){ %>
-                                    <td>No timeslots available.</td>
+                                <% if(appointments.length === 0){ %>
+                                    <td>No appointments available.</td>
                                     <% }else { %>
-                                        <% timeslots.forEach(function(timeslot){ %>
+                                        <% appointments.forEach(function(appointment){ %>
                                             <tr>
 
                                                 <td>
-                                                    <%= timeslot.availabilityTime %>
+                                                    <%= appointment.date %>
                                                 </td>
                                                 <td>
-                                                    <%= timeslot.numberOfStudents %>
+                                                    <%= appointment.eventTitle %>
                                                 </td>
                                                 <td>
-                                                    <%= timeslot.date%>
+                                                    <%= appointment.lecturerName%>
                                                 </td>
                                             </tr>
                                             <%}); %>
