--- a/SRC/views/timeslot.ejs
+++ b/SRC/views/timeslot.ejs
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <h3>Set Appointment</h3><br>
+    <h3>Set Availability Time slot</h3><br>
     <div class="card text-center">
         <form id="scheduleAppointmentForm" action="/createTimeslot" method="post">
             <div class="mb-3">
