Cancel appointment complete

--- a/SRC/views/studentDashboard.ejs
+++ b/SRC/views/studentDashboard.ejs
@@ -86,7 +86,7 @@
                                                     <td>
                                                         <%= appointment.lecturerName %>
                                                     </td>
-                                                    <td><a href="/cancel/<%= appointment.id %>">Modify</a></td>
+                                                    <td><a href="/updateConsultationTimes/<%= appointment.id %>">Modify</a></td>
                                                     <td><a href="/cancel/<%= appointment.id %>">Cancel</a></td>
 
                                                
