Adding settings link

--- a/SRC/views/studentDashboard.ejs
+++ b/SRC/views/studentDashboard.ejs
@@ -46,6 +46,7 @@
                                 Appointment</a>
                             <a class="nav-link" href="#">View Available Time slots</a>
                             <a class="nav-link" href="#">Cancel Appointments</a>
+                            <a class="nav-link" href="/Settings">Settings</a>
                         </nav>
                     </div>
                 </div>
