--- a/SRC/views/lecturerDashboard.ejs
+++ b/SRC/views/lecturerDashboard.ejs
@@ -64,7 +64,8 @@
                     <div class="col-12 menu-container">
                         <nav class="nav flex-column">
                             <a class="nav-link" href="/createTimeslot">Set Availability times</a>
-                            <a class="nav-link" id="Edit" href="\update">Edit Consultation</a>
+                            <a class="nav-link" id="Edit" href="/update">Edit Consultation</a>
+                            <a class= "nav-link" href="/Settings">Settings</a>
                         </nav>
                     </div>
                 </div>
