Checking new password strength

--- a/SRC/views/password.ejs
+++ b/SRC/views/password.ejs
@@ -14,10 +14,23 @@
         <label for="currentPassword" class="form-label">Current Password</label>
         <input type="password" class="form-control" id="currentPassword">
     </div>
+
     <div class="mb-3">
         <label for="newPassword" class="form-label">New Password</label>
-        <input type="password" class="form-control" id="newPassword">
+        <input type="password" class="form-control" id="password"  oninput="validatePasswordWrapper(event)" />
+
     </div>
+
+    <div class="password_requirements">
+        <ul>
+            <div class="input-group mb-3">
+                <span id="password-error"></span>
+            </div>
+        </ul>
+    </div>
+</div>
+
+
     <div class="mb-3">
         <label for="confirmPassword" class="form-label">Confirm New Password</label>
         <input type="password" class="form-control" id="confirmPassword">
