Check Matching passwords

--- a/SRC/views/password.ejs
+++ b/SRC/views/password.ejs
@@ -33,9 +33,12 @@
 
     <div class="mb-3">
         <label for="confirmPassword" class="form-label">Confirm New Password</label>
-        <input type="password" class="form-control" id="confirmPassword">
-        
+        <input type="password" class="form-control" id="password_confirm"
+        oninput="confirmPasswordWrapper(event)" />
+      <div class="input-group mb-3">
+        <span id="password-fail"></span>
     </div>
+    
     <button type="submit" class="btn btn-primary">Submit</button>
 
 </body>
