--- a/SRC/views/settings.ejs
+++ b/SRC/views/settings.ejs
@@ -63,6 +63,15 @@
   </div>
   </div>
 </form>
+
+<!----------------------------Delete Account---------------------------------->
+<form action = "/delete-account"  method="post" id="delete">
+<div class="mb-3" id="delete-form" style="display: none;">
+<div id="delete-account">
+  <button id="deleteButton" class="delete-button">Delete Account</button>
+</div>
+</div>
+</form>
   
   </div>
 </body>
