add delete column to the time-slot dashboard

--- a/SRC/views/timeslots.ejs
+++ b/SRC/views/timeslots.ejs
@@ -85,6 +85,7 @@
                                     <th scope="col">Time</th>
                                     <th scope="col">Number of Students</th>
                                     <th scope="col">Date</th>
+                                    <th scope="col">Delete Consultation</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -102,6 +103,9 @@
                                                 </td>
                                                 <td>
                                                     <%= timeslot.date%>
+                                                </td>
+                                                <td>
+                                                    <a class="nav-link" id="delete" href="#">delete</a>
                                                 </td>
                                             </tr>
                                             <%}); %>
