added includeAnotherLecturer added horizontal menu bar

--- a/SRC/views/includeAnotherLecturer.ejs
+++ b/SRC/views/includeAnotherLecturer.ejs
@@ -53,4 +53,13 @@
             </nav>
         </header>
     </section>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 col-md-2">
+                <div class="row h-100">
+                    <div class="col-12 menu-container">
+                        
+                    </div>
+                </div>
+            </div>
 </body>
