Added another lecturer item to menu bar in lecturer Dashboard

--- a/SRC/views/lecturerDashboard.ejs
+++ b/SRC/views/lecturerDashboard.ejs
@@ -65,6 +65,7 @@
                         <nav class="nav flex-column">
                             <a class="nav-link" href="/createTimeslot">Set Availability times</a>
                             <a class="nav-link" id="Edit" href="\update">Edit Consultation</a>
+                            <a class="nav-link" id="Edit" href="\includeAnotherLecturer">Include another lecturer</a>
                         </nav>
                     </div>
                 </div>
