added Event title field

--- a/SRC/views/includeAnotherLecturer.ejs
+++ b/SRC/views/includeAnotherLecturer.ejs
@@ -72,6 +72,11 @@
                     <input name="includeAnotherLecturer" type="text" class="form-control" required>
                 </label><br>
                 <p class="form-errors" id="includeAnotherLecturerError"></p>
+                <label class="form-label">Event Title
+                    <input name="eventTitle" type="text" class="form-control" id="eventTitle" required>
+                </label><br>
+               
+            
                 <input type="submit" value="Add">
             </div>
         </form>
