added Event student name field

--- a/SRC/views/includeAnotherLecturer.ejs
+++ b/SRC/views/includeAnotherLecturer.ejs
@@ -75,6 +75,13 @@
                 <label class="form-label">Event Title
                     <input name="eventTitle" type="text" class="form-control" id="eventTitle" required>
                 </label><br>
+                <p class="form-errors" id="eventTitleError"></p>
+
+                <label class="form-label">Student Name
+                    <input name="lecturerName" type="text" class="form-control" id="StudentName" required>
+                </label><br>
+                <p class="form-errors" id="studentNameError"></p>
+
                
             
                 <input type="submit" value="Add">
