added Event date field

--- a/SRC/views/includeAnotherLecturer.ejs
+++ b/SRC/views/includeAnotherLecturer.ejs
@@ -82,7 +82,10 @@
                 </label><br>
                 <p class="form-errors" id="studentNameError"></p>
 
-               
+                <label class="form-label">Date
+                    <input name="date" type="datetime-local" class="form-control" id="date" required>
+                </label><br>
+                <p class="form-errors" id="dateError"></p>
             
                 <input type="submit" value="Add">
             </div>
